--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-15.31MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇭🇰 香港-2.61MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,10 +21,10 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -36,10 +36,10 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -52,10 +52,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -66,16 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -87,10 +88,10 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -103,10 +104,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
@@ -128,10 +129,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
