--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.61MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇨🇳 中国-9.89MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 38.75.136.102, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-257.4KB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-852.2KB/s(Youtube:不良林), server: 51.81.223.21, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-156.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-257.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-852.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-156.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
